--- a/index.html
+++ b/index.html
@@ -65,5 +65,5 @@ iframe {
   transform-origin: top left;
 }
 </style>
-<iframe src="https://links.collect.chat/5c4415d20064a77c69cd514d" width="100%" height="600" frameBorder="0"></iframe>
+<script type="text/javascript">(function(t,e){var r=function(t){try{var r=e.head||e.getElementsByTagName("head")[0];a=e.createElement("script");a.setAttribute("type","text/javascript");a.setAttribute("src",t);r.appendChild(a);}catch(t){}};t.CollectId = "5c4415d20064a77c69cd514d";r("https://collectcdn.com/launcher.js");})(window,document);</script>
 <!-- <iframe src="https://www.maimemo.com/share/page/?uid=779139&pid=660" style="display: none;"></iframe> -->
